<resources>
    <string name="app_name">AndroidREstaurant</string>
    <string name="entreesButton">Entrees</string>
    <string name="platsButton">Plats</string>
    <string name="dessertsButton">Desserts</string>
    <string name="burgerContent">This is a cool burger</string>
    <string name="buttonSides">Sides</string>
    <string name="titleMain">Burgisen</string>
    <string name="bunBottomDesc">bunBottom</string>
    <string name="bunTopDesc">bunTop</string>
    <string name="imgEntreesDesc">a good entree</string>
    <string name="imgentreeDesc">this looks good</string>
</resources>