<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkBunLight"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="238dp"
        android:layout_height="180dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/burgerContent"
        app:layout_constraintEnd_toEndOf="@+id/buttonEntrees"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/buttonEntrees"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burger_king_logo" />

    <Button
        android:id="@+id/buttonEntrees"
        style="@android:style/Widget.Button"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:layout_marginTop="292dp"
        android:backgroundTint="@color/bkSalad"
        android:fontFamily="@font/insanibc"
        android:text="@string/entreesButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/buttonPlats"
        style="@android:style/Widget.Button"
        android:layout_width="122dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/bkTomato"
        android:fontFamily="@font/insanibc"
        android:text="@string/platsButton"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonEntrees"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonEntrees"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntrees" />

    <Button
        android:id="@+id/buttonDesserts"
        style="@android:style/Widget.Button"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/bkPatty"
        android:fontFamily="@font/insanibc"
        android:text="@string/dessertsButton"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlats"
        app:layout_constraintStart_toStartOf="@+id/buttonPlats"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlats" />

    <ImageView
        android:id="@+id/topBun"
        android:layout_width="152dp"
        android:layout_height="241dp"
        android:layout_marginTop="216dp"
        android:contentDescription="@string/bunBottomDesc"
        app:layout_constraintEnd_toEndOf="@+id/buttonEntrees"
        app:layout_constraintStart_toStartOf="@+id/buttonEntrees"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bun_top" />

    <ImageView
        android:id="@+id/bottomBun"
        android:layout_width="154dp"
        android:layout_height="222dp"
        android:contentDescription="@string/bunTopDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonDesserts"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/buttonDesserts"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771"
        app:srcCompat="@drawable/bun_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>